--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                 </div>   
 
             </div>
+
             <div class="centratura">
                 <div>
                     <picture>
@@ -135,19 +136,114 @@
                 </div>   
 
             </div>
+
             <div class="centratura">
                 <div>
-                    <div>
+                    <picture>
                         <img id="foto" src="./img/testimonial3.jpg" alt="">
-                    </div>  
+                    </picture>  
                 </div>           
                 <div>
                     <p>"vitae suscipit tellus maurus a diam maecenas sed enim ut. maurus augue neque gravida in fermentum. Praesent semper feugiat nibh pulvidjs proin." <br> <br>   <span>NAT REYNOLDS </span></p>
                 </div>   
 
+            </div>   
+
             </div>
 
             </div>
+        </section>
+
+        <section id="title-3">
+            <div>
+                <h2>Benefits of working with us</h2>
+            </div>
+        </section>
+
+        <section class="seicarte">
+            <div class="contenitore-flex">
+            <div class="carta">
+                <div>
+                    <h2>01</h2>
+                </div>
+                <div>
+                <h3>Hight Quality</h3>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet nisi aperiam deleniti. ciao a tutti amici miei</p>
+                                    </div>
+                <div class="Bottoneviola">
+                    <button>more</button>
+                </div>
+            </div>
+
+            <div class="carta">
+                <div>
+                    <h2>02</h2>
+                </div>
+                <div>
+                    <h3>Creative Team</h3>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet nisi aperiam deleniti. ciao a tutti amici miei</p>    
+                </div>
+                <div class="Bottoneviola">
+                    <button>more</button>
+                </div>
+            </div>
+
+            <div class="carta">
+                <div>
+                    <h2>03</h2>
+                </div>
+                <div><h3>Amazing Results</h3></div>
+                <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet nisi aperiam deleniti. ciao a tutti amici miei</p>    
+                </div>
+                <div class="Bottoneviola">
+                    <button>more</button>
+                </div>
+            </div>
+
+            <div class="carta">
+                <div>
+                    <h2>04</h2>
+                </div>
+                <div><h3>Hight Quality</h3></div>
+                <div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet nisi aperiam deleniti. ciao a tutti amici miei</p>
+                </div>
+                <div class="Bottoneviola">
+                    <button>more</button>
+                </div>
+            </div>
+
+            <div class="carta">
+                <div>
+                    <h2>05</h2>
+                </div>
+                <div><h3>Creative Team</h3></div>
+                <div>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet nisi aperiam deleniti. ciao a tutti amici miei</p> 
+               </div>
+                <div class="Bottoneviola">
+                    <button>more</button>
+                </div>
+            </div>
+
+            <div class="carta">
+                <div>
+                    <h2>06</h2>
+                </div>
+                <div><h3>Creative Team</h3></div>
+                <div>
+                   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet nisi aperiam deleniti. ciao a tutti amici miei</p> 
+                </div>
+                <div class="Bottoneviola">
+                    <button>more</button>
+                </div>
+            </div>
+        </div>
         </section>
     </main>
 
