--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </picture>  
                 </div>           
                 <div>
-                    <p>"vitae suscipit tellus maurus a diam maecenas sed enim ut. maurus augue neque gravida in fermentum. Praesent semper feugiat nibh pulvidjs proin." <br>  <br>  <span>NAT REYNOLDS </span></p>
+                    <p><span class="asterisco"><i class="fa-solid fa-quote-left"></i></span>vitae suscipit tellus maurus a diam maecenas sed enim ut. maurus augue neque gravida in fermentum. Praesent semper feugiat nibh pulvidjs proin.<span class="asterisco">"</span> <br>  <br>  <span>NAT REYNOLDS </span></p>
                 </div>   
 
             </div>
@@ -132,7 +132,7 @@
                     </picture>  
                 </div>           
                 <div>
-                    <p>"vitae suscipit tellus maurus a diam maecenas sed enim ut. maurus augue neque gravida in fermentum. Praesent semper feugiat nibh pulvidjs proin." <br> <br>   <span>NAT REYNOLDS </span></p>
+                    <p><span class="asterisco"><i class="fa-solid fa-quote-left"></i></span>vitae suscipit tellus maurus a diam maecenas sed enim ut. maurus augue neque gravida in fermentum. Praesent semper feugiat nibh pulvidjs proin.<span class="asterisco">"</span> <br> <br>   <span>NAT REYNOLDS </span></p>
                 </div>   
 
             </div>
@@ -144,7 +144,7 @@
                     </picture>  
                 </div>           
                 <div>
-                    <p>"vitae suscipit tellus maurus a diam maecenas sed enim ut. maurus augue neque gravida in fermentum. Praesent semper feugiat nibh pulvidjs proin." <br> <br>   <span>NAT REYNOLDS </span></p>
+                    <p><span class="asterisco"><i class="fa-solid fa-quote-left"></i></span>vitae suscipit tellus maurus a diam maecenas sed enim ut. maurus augue neque gravida in fermentum. Praesent semper feugiat nibh pulvidjs proin.<span class="asterisco">"</span> <br> <br>   <span>NAT REYNOLDS </span></p>
                 </div>   
 
             </div>   
@@ -245,7 +245,45 @@
             </div>
         </div>
         </section>
+
+        <section>
+            <div class="aboutus">
+                <div class="left">
+                    <h3>About us</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis nostrum id amet. Sunt nemo animi dolorem officiis, exercitationem nulla accusamus blanditiis quidem minima dignissimos ipsum. Provident quod doloremque corporis iure! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur nihil quisquam quos voluptate illum consequuntur veritatis, impedit facere quaerat ut dolorem, praesentium, officiis repellat minus vitae dolor maxime quis? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia debitis recusandae soluta impedit doloremque inventore veritatis quo nam porro. Veritatis necessitatibus obcaecati excepturi officiis quaerat ratione perspiciatis, praesentium recusandae adipisci?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro vel et explicabo iste hic quae, cupiditate aliquam repellendus expedita magni veritatis consectetur iure ugiat nihil obcaecipsum dolor sit amet, consectetur adipisicing elit. Neque maxime laboriosam, voluptas vel repellat atque debitis quae quaerat harum eum, nulla fuga distinctio tenetur delectus consequuntur pariatur excepturi hic. Repellat. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi nemo laudantium vel? Qui tempora cumque inventore maxime fugit distinctio accusamus optio, repellat, vitae consectetur, alias facere a voluptate laboriosam totam.</p>
+                </div>
+
+                <div class="right">
+                    <picture><img src="./img/testimonial3.jpg" alt=""></picture>
+                    <p>I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio</p>
+                    <button><i class="fa-brands fa-linkedin"></i>  Find me on linkedim</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="conclusione">
+            <div>
+                <h6>GET STARTED</h6>
+                <h3>Simple, Trasparent Pricing</h3>
+                <h2>Its Free!</h2>
+                <p>We`re still in beta and we will be for awhile. As we add <br> more functionality, We`ll look into other plans with more controls.</p>
+                <button>Get Started</button>
+                <p>Copyright 2021 Boolean · Classe 115 · <u>Privacy policyS</u></p>
+            </div>
+            
+        </section>
     </main>
 
+    <footer>
+        <section>
+            <div class="sopra">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> In temporibus itaque rerum. Dolor suscipit iure quia temporibus repellendus facilis!</p>
+            </div>
+            <div>
+                <p><u>Lorem ipsum</u> scelerisque mauris pellentesque <u>Boolean</u></p>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
