--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolorem? Iure amet magnam provident distinctio, non, </p>
                             <button><i class="fa-brands fa-apple"></i> app store</button>
                         </div>
-                    <div>
-                        <img src="./img/phone.png" alt="">
+                        <div>  
+                            <figure>
+                                <img src="./img/phone.png" alt="">
+                            </figure>
+                        </div>
                     </div>
-                </div>
                 </div>
             
                 <div class="cards-small">
